<resources>
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="sort_by">Sort by…</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="error_message">Error loading data from the internet.</string>
    <string name="try_again">Try again</string>
    <string name="error_toast">Couldn\'t retrieve data, please try again.</string>
    <string name="synopsis">Synopsis</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="no_network">No network connection</string>
    <string name="about">About</string>
    <string name="about_message">App that helps you discover the most popular movies, made for the Android Developer Nanodegree program. \n\nLauncher icon: \u00A9 2014 IconShow.me</string>
    <string name="summary_not_available">No summary is available for this language.</string>
    <string name="empty_favorite">No favorite movie yet</string>
    <string name="failed_remove_fav">Failed to remove from favorites</string>
    <string name="failed_insert_fav">Failed to insert into favorites</string>

    <string name="favorites">Favorites</string>
    <string name="videos">Videos</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews found</string>
    <string name="no_videos">No videos found</string>
    <string name="unknown">Unknown</string>

    <string name="placeholder_title" translatable="false"/>
    <string name="placeholder_author" translatable="false"/>
    <string name="placeholder_content" translatable="false"/>

    <string name="crash_dialog_title" translatable="false">PopularMovies has crashed</string>
    <string name="crash_dialog_text" translatable="false">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt" translatable="false">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast" translatable="false">Thank you!</string>
    <string name="search_hint">Movie title</string>
    <string name="director">Director</string>
</resources>
