<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/sort_by"
          app:showAsAction="ifRoom"
          android:orderInCategory="100"
          android:icon="@drawable/ic_sort_black">

        <menu>
            <group android:checkableBehavior="single"
                   android:enabled="true"
                android:id="@+id/group_sort_by">

                <item android:title="@string/most_popular"
                      android:id="@+id/item_sort_by_popularity"/>

                <item android:title="@string/top_rated"
                        android:id="@+id/item_sort_by_rate"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/about"
          app:showAsAction="never"
          android:id="@+id/item_about" />

</menu>